--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.6.0",
+    "nodemailer": "^6.9.6",
+    "nodemailer-mailgun-transport": "^2.1.5",
     "stripe": "^13.6.0"
   }
 }
